# cs2solutions

./: README.md  UPDATE.md  VERSIONS.md  pyproject.toml
src/cs2solutions/: __init__.py  aircraft.py  cs2bot.py  decomp.py  discretization.py  duckiebot.py  inf_pkg.py  intro.py  intromimo.py  morse.py  norms.py  plot.py  test.py
src/cs2solutions.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
