[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["src/solutions"]

[project]
name = "cs2solutions"
version = "0.1.1"
dependencies =[
    "control",
    "matplotlib"
]
requires-python = ">=3.9"
authors = [
  { name="Kalle Laitinen", email="klaitinen@ethz.ch" },
  { name="Dejan Milojevic", email="dejanmi@ethz.ch" },
  { name="Niclas Scheuer", email="nscheuer@ethz.ch" }
]
maintainers = [
  { name="Kalle Laitinen", email="klaitinen@ethz.ch" },
  { name="Niclas Scheuer", email="nscheuer@ethz.ch" }
]
description = "A package containing solutions for the CS2 lecture at ETH Zürich"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
]

[project.urls]
Homepage = "https://ethz.ch"