[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["src/solutions"]

[project]
name = "cs2solutions"
version = "0.8.0"
dependencies =[
    "control",
    "matplotlib",
    "numpy",
    "scipy",
    "sympy"
]
requires-python = ">=3.9"
authors = [
  { name="Kalle Laitinen", email="klaitinen@ethz.ch" },
  { name="Dejan Milojevic", email="dejanmi@ethz.ch" },
  { name="Niclas Scheuer", email="nscheuer@ethz.ch" }
]
maintainers = [
  { name="Kalle Laitinen", email="klaitinen@ethz.ch" },
  { name="Niclas Scheuer", email="nscheuer@ethz.ch" }
]
description = "A package containing solutions for the CS2 lecture at ETH Zürich"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
Homepage = "https://idsc.ethz.ch/education/lectures/control-systems-ii.html"
Repository = "https://github.com/idsc-frazzoli/cs2solutions"
Notebooks = "https://github.com/idsc-frazzoli/CS2-2024-notebooks"